--- a/vendas.html
+++ b/vendas.html
@@ -11,5 +11,7 @@
     <h1>Pagina de vendas</h1>
     <a href="index.html">voltar</a>
     <p>Produto 01 R$ 49,90</p>
+    <p>Produto 01 R$ 59,90</p>
+    <p>Produto 01 R$ 69,90</p>
 </body>
 </html>
